--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,24 @@
+/* VARIABLES */
+
+:root {
+    /* COLORES */
+
+    --verde-claro: #9FD6C7;
+    --verde-oscuro: #207D66;
+    --marron: #31180F;
+    --blanco: #FAF9F2;
+    
+
+}
+
+
+
 *{
     margin: 0;
+}
+
+body {
+    background-color: rgb(239, 239, 239);
 }
 
 .logo {
@@ -9,5 +28,62 @@
 
 a, a:hover, a:visited {
     text-decoration: none;
-    color: #fff;
+    color: var(--marron);
 }
+
+ul, ol{
+    list-style: none;
+}
+
+
+.container-header {
+    width: 90%;
+    border: 1px solid rgb(170, 170, 170);
+    margin: 0 auto;
+    padding: 20px 0;
+    background-color: var(--verde-claro);
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.links  {
+    display:flex;
+}
+
+.links > li {
+    padding: 15px;
+}
+
+.links > li > a:hover {
+    text-decoration: underline;
+}
+
+
+.button {
+    font-size:18px;
+    font-family:Arial;
+    text-align: center;
+    justify-content: center;
+    width:142px;
+    height:50px;
+    border-width:3px;
+    color:rgba(255, 255, 255, 1);
+    border-color:rgba(32, 125, 102, 1);
+    font-weight:bold;
+    border-top-left-radius:13px;
+    border-top-right-radius:13px;
+    border-bottom-left-radius:13px;
+    border-bottom-right-radius:13px;
+    box-shadow: 5px 4px 3px 0px rgba(146, 140, 140, 1);
+    text-shadow: 1px 1px 0px rgba(160, 160, 160, 0);
+    background:rgba(32, 125, 102, 1);
+    border-color:rgba(32, 125, 102, 1);
+  }
+  
+  .button:hover {
+    background: rgba(159, 214, 199, 1);
+    border: 3px solid var(--verde-oscuro)
+  }
+    
