--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 :root {
     /* COLORES */
 
-    --verde-claro: #9FD6C7;
+    --verde-claro: rgb(159, 214, 199);
     --verde-oscuro: #207D66;
     --marron: #31180F;
     --blanco: #FAF9F2;
@@ -11,14 +11,22 @@
 
 }
 
+html {
+    scroll-behavior: smooth;
+  }
 
+main {
+    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.3), rgb(159, 214, 199));
+}
 
 *{
     margin: 0;
+    font-family: 'Karla', sans-serif;
 }
 
-body {
-    background-color: rgb(239, 239, 239);
+header {
+    background-image: url(/img/alyson-mcphee-yWG-ndhxvqY-unsplash.jpg);
+    background-size: cover;
 }
 
 .logo {
@@ -37,11 +45,10 @@ ul, ol{
 
 
 .container-header {
-    width: 90%;
-    border: 1px solid rgb(170, 170, 170);
+    width: 100%;
     margin: 0 auto;
     padding: 20px 0;
-    background-color: var(--verde-claro);
+    background-image: linear-gradient(180deg, rgba(159, 214, 199, 0.3), rgba(100%,100%,100%, 0.1) );
 
     display: flex;
     justify-content: space-around;
@@ -56,34 +63,102 @@ ul, ol{
     padding: 15px;
 }
 
+.links > li > a {
+    color: white;
+    text-shadow: 2px 2px 5px black;
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
 .links > li > a:hover {
     text-decoration: underline;
+    color: white;
+    text-shadow: 2px 2px 5px black;
 }
 
 
 .button {
-    font-size:18px;
-    font-family:Arial;
+    background-color: rgb(144, 241, 215); /* Green */
+    border: none;
+    color: white;
+    border-radius: 13px;
+    padding: 15px 32px;
     text-align: center;
-    justify-content: center;
-    width:142px;
-    height:50px;
-    border-width:3px;
-    color:rgba(255, 255, 255, 1);
-    border-color:rgba(32, 125, 102, 1);
-    font-weight:bold;
-    border-top-left-radius:13px;
-    border-top-right-radius:13px;
-    border-bottom-left-radius:13px;
-    border-bottom-right-radius:13px;
-    box-shadow: 5px 4px 3px 0px rgba(146, 140, 140, 1);
-    text-shadow: 1px 1px 0px rgba(160, 160, 160, 0);
-    background:rgba(32, 125, 102, 1);
-    border-color:rgba(32, 125, 102, 1);
+    display: inline-block;
+    font-size: 16px;
+    letter-spacing: 2px;
   }
+
+.button:hover {
+    background-color: var(--verde-claro)
+}
+   
   
-  .button:hover {
-    background: rgba(159, 214, 199, 1);
-    border: 3px solid var(--verde-oscuro)
-  }
-    
+
+.heading {    
+    font-size: 5rem;
+    margin-left: 23%;
+    margin-top: 8%;
+    color: #fff;
+    text-shadow: 2px 2px 5px black;
+    letter-spacing: 2px;
+}
+
+.description {
+    margin-left: 24%;
+    margin-top: 1%;
+    color: #fff;
+    text-shadow: 2px 2px 5px black;
+    font-weight: bold;
+    font-size: 1.6rem;
+    letter-spacing: 4px;
+}
+
+.ctr-heading {
+    padding-bottom: 290px;
+}
+
+.ctr-heading .button {
+    margin-left: 24%;
+    margin-top: 2%;
+}
+
+.ctr-eventos {
+    margin: 40px auto;
+    width: 85%;
+    min-height: 600px;
+    border: 1px solid var(--verde-claro);
+    background-image: url(/img/fondo-hero.jpg);
+    background-size: cover;
+    border-radius: 8px;
+}
+
+.ctr-eventos .info {
+    margin: 20px 40px;
+    background-color: #fff;
+    max-width: 40%;
+    min-height: 550px;
+    border-radius: 12px;
+}
+
+.ctr-eventos .info h3 {
+    font-size: 1.8rem;
+    padding-top: 35px;
+    padding-bottom: 45px;
+    color: black;
+    /* text-shadow: 2px 2px 5px black; */
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.ctr-eventos .info p {
+    color: black;
+    text-align: left;
+    margin: 20px 60px;
+    line-height: 2;
+}
+
+.ctr-eventos .info .button {
+    margin: 50px 150px 0; 
+}
