--- a/css/style.css
+++ b/css/style.css
@@ -162,3 +162,62 @@ ul, ol{
 .ctr-section .info .button {
     margin: 50px 150px 0; 
 }
+
+
+.carousel {
+    margin-bottom: 400px;
+    width: 85%;
+    margin: 0 auto;
+}
+
+ul.slider {
+    position:relative;
+    height: 300px;
+    width: 85%;
+    margin: 0 auto;
+}
+
+.slider li {
+    position: absolute;
+    left: 0;
+    top:0;
+    opacity:0;
+    width: inherit;
+    height: inherit;
+    transition: opacity .5s;
+    margin: 0 auto;
+}
+
+.slider li img {
+
+    width: 100%;
+    object-fit: cover;
+    margin: 0 auto;
+}
+
+ul.slider li:first-child{
+    opacity:1;
+}
+
+ul.slider li:target {
+    opacity: 1;
+}
+
+.index {
+    background-color: #207D66;
+    display: flex;
+    justify-content: center;
+    margin-top: 550px;
+    padding: 20px;
+}
+
+.index li a{
+    background-color: white;
+    width: 50px;
+    text-align: center;
+    padding: 15px;
+    margin: 15px;
+    border-radius: 50px;
+    border: 1px solid black;
+    scroll-behavior: smooth;
+}
